@@ -1,5 +1,8 @@
 2017-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/topol.c (ReadTOPOLImage): Fix SourceForge issue #510
+	"null pointer and meory leak in topol.c".
+
 	* magick/widget.c (MagickXFileBrowserWidget): Fix SourceForge
 	issue #506 "null pointer in widget.c".
 
